--- a/style.css
+++ b/style.css
@@ -37,3 +37,21 @@ body {
   background-color: #000000;
   color: #ffffff;
 }
+
+@keyframes fadeIn {
+  from { 
+    opacity: 0;
+    padding: 0;
+  }
+  to { 
+    opacity: 1;
+    padding: 3rem;
+  }
+}
+
+.replace-with-specific-element-css-animation .fade-in {
+  animation: fadeIn 1s ease-out;
+  padding: 3rem;
+  background-color: #000000;
+  color: #ffffff;
+}
